--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.js",
-    "build": "echo 'No build step required'"
+    "build": "npm install"
   },
   "keywords": [
     "backend",
